[package]
name = "pgbenchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
indicatif = "0.18.4"
pico-args = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["json", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.23.0"
